Correct link to the source code
updated placeholder to real code

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $(document).ready(function() {
 
         <div class="span4" id="CC"> &copy; theCapacity 2012
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/3.0/80x15.png" /></a>
-            <a href="http://github.com/thecapacity">Source Code</a>
+            <a href="https://github.com/thecapacity/digitalgov-tracker">Source Code</a>
         </div>
 
     </div> <!-- end of 1st footer row -->
