--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ $(document).ready(function() {
             <div class="nav-collapse">
             <ul class="nav">
                 <li class="active"><a data-toggle="modal" href="#aboutModal">About</a></li>
-                <li><a href="https://twitter.com/#!/search/realtime/%23digitalgov-tracker">Discuss</a></li>
+                <li><a href="https://twitter.com/#!/search/realtime/digitalgov-tracker">Discuss</a></li>
                 <li><a href="http://twitter.com/wjhuie">Contact</a></li>
             </ul>
             </div><!--/.nav-collapse -->
